# monarch_active_perception

./: README.md
active_perception_controller/: CMakeLists.txt  active_perception_interface_plugin.xml  data  package.xml  setup.py
active_perception_controller/config/: path_filter.rviz
active_perception_controller/include/active_perception_controller/: active_perception_interface.h  active_perception_interface1.h  optimizer.h  particle_filter.h  person_particle_filter.h  person_particle_filter_desc.h  rfid_sensor_model.h  robot_motion_model.h  robot_sensor_model.h  sensor_model.h  sensor_model_map.h  utility.h  utility_map.h
active_perception_controller/include/active_perception_controller/unused/: motion_planner.h  optimizer.h  utility_map.h
active_perception_controller/launch/: person_estimator.launch  simulation.launch  simulation_4ag_estimator.launch  simulation_4ag_planner.launch  simulation_coop_4.launch  simulation_coop_4_prueba.launch  test_path_filter.launch
active_perception_controller/src/: active_perception_interface.cpp  active_perception_interface1.cpp  active_perception_task_node.py  active_perception_task_node_obstacles.py  motion_planner.py  motion_planner_coop.py  motion_planner_coop_sam.py  motion_planner_sam.py  optimization_node.cpp  optimizer.cpp  particle_filter.cpp  particle_filter.h  path_particle_filter.py  path_particle_filter_continuous.py  person_estimator.cpp  person_estimator_coop.cpp  person_estimator_coop_sam.cpp  person_estimator_desc.cpp  person_particle_filter.cpp  person_particle_filter.h  person_particle_filter_desc.cpp  random_controller.py  rfid_sensor_model.cpp  robot_sensor_model.cpp  sensor_model_map.cpp  topic2txt.py  utility.cpp
active_perception_controller/src/unused/: motion_planner.cpp  optimization_node.cpp  optimizer.cpp  robot_motion_model.cpp
stage_simulation/: CMakeLists.txt  package.xml
stage_simulation/config/: VdG_1st_floor.yaml  VdG_1st_floor_restricted_areas.yaml  VdG_parking_stage_map.yaml  base_local_planner_params.yaml  base_local_planner_params_VdG.yaml  costmap_common_params.yaml  costmap_common_params_VdG.yaml  costmap_common_params_stage0.yaml  costmap_common_params_stage1.yaml  costmap_common_params_stage2.yaml  costmap_common_params_stage3.yaml  costmap_common_params_stage4.yaml  costmap_common_params_stage5.yaml  dwa_local_planner_params.yaml  global_costmap_params_VdG.yaml  initial_pose_100.yaml  isr6-v03cr.yaml  local_costmap_params_VdG.yaml  maiss.world  maiss2.world  maiss3.world  maiss_2robot.world  maiss_2robot_laser.world  maiss_2robot_recovery.world  maiss_4robots.world  maiss_5robots.world  maiss_decoupled_agent_100.world  maiss_decoupled_agent_101.world  maiss_prueba.world  map_8thfloor.yaml  map_8thfloor_Rviz.yaml  mbot_common_costmap_params.yaml  monarch.world  move_to_event_position_params.yaml  other_agent_obstacles_params.yaml  prueba.yaml  simulation.rviz  simulation_4robots.rviz  (+6 more)
(+20 files in other folders)
